--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -62,7 +62,7 @@ Investigación es un proceso activo, donde las hipótesis ayudan a que las activ
 Cuando se elige una hipótesis a testear se debe considerar:
 
 - **Testeabilidad**: que se le puedan realizar múltiples testeos
-- **Parsimonia**: de acuerdo a la Navaja de Occam, es decir, si poseo o manejo más de una hipótesis y estas son similares, me quedaré siempre con la que es más corta y sencilla.
+- **Parsimonia**: de acuerdo a la Navaja de Ockham, es decir, si poseo o manejo más de una hipótesis y estas son similares, me quedaré siempre con la que es más corta y sencilla.
 - **Alcance**: la aparente aplicación de la hipótesis a múltiples casos de fenómenos actuales.
 - **Fecundidad**: la expectativa de que la hipótesis pueda explicar fenómenos en el futuro.
 - **Conservatismo**: el grado de conformidad con el conocimiento reconocido actualmente.
@@ -83,7 +83,7 @@ Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser e
 
 - **Hipótesis de Investigación**: Este tipo de hipótesis son descriptivas de un valor o dato pronosticado, correlacionales, de diferencia de grupos, o incluso causales.
 - **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube no provoca una mejora en la productividad de los trabajos realizados en equipo*."
-- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan estas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
+- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan estás inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
 ### Las Preguntas de Investigación
 
 En un sentido amplio, el objetivo de la investigación en cualquier ciencia radica en *responder preguntas y adquirir conocimiento* acerca del “universo observable”. Las preguntas de investigación son el primer paso para comenzar una investigación, es la meta que buscaremos responder y será nuestra guía durante todo el proceso de investigación. No podemos comenzar a redactar o preparar un proyecto de investigación si no tenemos pregunta de investigación identificada. La pregunta de investigación tiene que cumplir 3
