--- a/3° Año/Metodología de Sistemas I/Unidad 11/2. Métricas.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 11/2. Métricas.md
@@ -17,7 +17,7 @@ Las actividades que se deben llevar a cabo a la hora de realizar una medición s
 4. **Interpretación**: Evaluación de las métricas resultantes para comprender la calidad de la representación.
 5. **Retroalimentación**: Recomendaciones obtenidas de la interpretación de las métricas del producto, transmitidas al equipo que construye el software.
 
-Al mismo tiempo, las métricas de software deben poseer una serie de atributos para que estas sean consideradas buena. Toda métrica debe ser: simple y calculable, empírica e intuitivamente convincente, coherente y objetiva, consistentes en el empleo de unidades y tamaños, independientes del lenguaje de programación, un mecanismo efectivo para la realimentación de calidad.
+Al mismo tiempo, las métricas de software deben poseer una serie de atributos para que estas sean consideradas buena. Toda métrica debe ser: **simple y calculable**, **empírica e intuitivamente convincente**, **coherente y objetiva**, **consistentes en el empleo de unidades y tamaños**, **independientes del lenguaje de programación**, **un mecanismo efectivo para la realimentación de calidad**.
 
 >[!important] Conclusiones
 >- La medición es una forma de generar evidencia respecto a un proceso y los cambios de proceso.
