Correcciones de SO

--- a/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/4. Concurrencia y Regiones Críticas.md
@@ -60,7 +60,7 @@ La ***sincronización*** es necesaria, ya que con esta podemos impedir que un pr
 	- **Instrucción CS (Compare and Swap)**: propias de máquinas IBM, se utiliza para actualizar una variable. Se realiza una copia de la variable y a posterioridad se verifica el contenido de la variable, si cambió es que entró otro proceso, por lo que se copian nuevamente los datos y si coincide se actualiza la información
 	- **Instrucción de intercambio**: intercambia el contenido de un registro con una posición de memoria. Durante la ejecución se bloquea el acceso a esa posición de memoria.
 
-Las ventajas de este tipo de métodos es que son a sistemas con cualquier número de procesos, ya sea mono-procesador o multiprocesador, además de ser simple y fácil de verificar. Con la desventaja que se emplea, la espera activa y puede existir aplazamiento indefinido, ya que cuando un proceso abandona la sección crítica y hay más de un proceso esperando, la selección es arbitraria y se puede negar indefinidamente el procesador a un proceso. Sin mencionar que pueden producirse interbloqueos entre procesos.
+Las ventajas de este tipo de métodos es que funcionan en sistemas con cualquier número de procesos, ya sea mono-procesador o multiprocesador, además de ser simple y fácil de verificar. Con la desventaja que se emplea, la espera activa y puede existir aplazamiento indefinido, ya que cuando un proceso abandona la sección crítica y hay más de un proceso esperando, la selección es arbitraria y se puede negar indefinidamente el procesador a un proceso. Sin mencionar que pueden producirse interbloqueos entre procesos.
 
 ## Interbloqueo Entre Procesos
 
