--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -1,5 +1,5 @@
 La memoria principal es un conjunto de circuitos donde se almacenan y recuperan temporalmente datos y programas sobre los que trabaja el procesador. A la memoria principal se la divide, lógicamente, en varias partes para que permita la presencia de varios procesos. El mecanismo de asignación de memoria principal debe ser realizado de manera eficientemente para contener el mayor número de procesos como sea posible.
-Debido a la incompatibilidad de algunos de los criterios para la creación de memorias, surge el concepto de jerarquía de memoria, que ya vimos en la [[4. Memorias#Jerarquia de Memorias| Unidad 4]] de arquitectura de computadoras.
+Debido a la incompatibilidad de algunos de los criterios para la creación de memorias, surge el concepto de jerarquía de memoria, que ya vimos en la [[4. Memorias#Jerarquia de Memorias|Unidad 4]] de arquitectura de computadoras.
 
 ![[SO-jermemoria.png]]
 
@@ -107,3 +107,11 @@ A nivel de implementación, todos los sistemas operativos que utilizan segmentac
 - La segmentación es visible al usuario, ya que los programadores pueden optimizar el código de forma tal de que ocupen mucho menos espacio en memoria.
 - La localidad espacial hace referencia a que después de ejecutar una instrucción, lo más probable es que se ejecute al siguiente. Y la localidad temporal se refiere a que en una rutina puede que se repita la ejecución de determinadas instrucciones, un número determinado de veces.
 - En los sistemas por demanda el procesador va pidiendo las instrucciones a medida que el procesador las va solicitando, en el sistema de predicción se sube un grupo de instrucciones/datos al mismo tiempo, esto produce polución en los distintos niveles de cache.
+- Existe un DMA (Acceso directo a memoria) para cada dispositivo de E/S que esté conectado a la computadora.
+- Todos los discos rígidos modernos funcionan con un DMA.
+- La fragmentación interna no puede ser solucionada, mientras que la fragmentación externa sí se puede solucionar mediante la compactación.
+- Con la segmentación paginada, el ciclo de vida del proceso es más corto y se mantiene la multiprogramación.
+
+>[!tldr] Monologo Sobre Asignación de Memoria
+>Sobre memoria, al realizar la asignación se hacen varias preguntas. ¿Hay espacio?, en caso de que no haya, mata algún proceso o manda a la memoria virtual. Si hay espacio se pregunta ¿Hay suficiente?, dependiendo si es segmentación o paginación se hace algo diferente. En segmentación, donde el tamaño es variable, tiene que hacer hueco para que entre. Con paginación usa marcos, espacios iguales, entonces se pregunta ¿Hay marcos suficientes?
+
