--- a/3° Año/Sistemas Operativos/Unidad 5/2. Practica de Archivos.md
+++ b/3° Año/Sistemas Operativos/Unidad 5/2. Practica de Archivos.md
@@ -10,11 +10,11 @@ $$\frac{\text{4096 Bytes}}{\text{4 Bytes}} = \text{1024 entradas}$$
 ### Almacenamiento de los I-Nodos
 
 Generalmente en los i-nodos, vamos a poder acceder a las posiciones físicas donde están almacenados los datos de 4 maneras diferentes, de forma directa o mediante indexación simple, doble o triple.
-En la indexación el sistema operativo tendrá reservado un bloque, que tendrá almacenados más direcciones, la cantidad de direcciones a las que puede acceder cada nivel está dado de la siguiente forma:
+En la indexación el sistema operativo tendrá reservado un bloque, que tendrá almacenados más direcciones, la cantidad de direcciones a las que puede acceder cada nivel está dado por el tamaño del bloque. La indexación puede ser de distintos niveles:
 
-- **Indexación simple** -> $512$ bloques.
-- **Indexación doble** -> $512^2$ bloques.
-- **Indexación triple** -> $512^3$ bloques.
+- **Indexación simple**.
+- **Indexación doble**.
+- **Indexación triple**.
 
 La manera de saber el tamaño máximo de un archivo estará denotado por la siguiente fórmula:
 
