--- a/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
+++ b/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
@@ -85,3 +85,4 @@ La velocidad y complejidad de los periféricos determinan como deben ser conecta
 - Existen dos tipos de buffers: de entrada y de salida.
 - La diferencia entre un buffer y la memoria caché, es que la memoria caché tiene almacenada información de los procesos que se encuentran en ejecución, mientras que los buffers almacenan información de entrada o de salida.
 - Los discos duros por lo general están compuestos por dos componentes, uno electrónico que es el controlador, y uno mecánico, que en este caso son los discos como tal.
+- Todos los discos rígidos modernos funcionan con un DMA.
