--- a/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
+++ b/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
@@ -40,3 +40,11 @@ Esto conlleva a una serie de ventajas y desventajas, las cuales son las siguient
 - Gestionar la asignación de espacio en el almacenamiento secundario.
 
 Las motivaciones detrás de la organización de los archivos es el menor tiempo de acceso, la facilidad para la modificación, simplifica el mantenimiento, además de ser más confiable.
+
+---
+
+### Cosas que fue Diciendo Berón
+
+- El nombre de los archivos no se almacena en los i-nodos, sino que en los directorios donde está dicho archivo. Cada directorio tienen una tabla, esta tabla cuenta con un registro por cada archivo que se encuentre dentro de ese directorio, ese registro va a estar conformado por dos campos, uno que contiene el nombre del archivo y el otro campo contendrá el número de i-nodo.
+- La extensión de los archivos sirven para indicar con qué aplicación se va a abrir dicho archivo.
+- Para poder acceder a un archivo se necesita conocer la ruta donde este mismo se encuentra.
