--- a/3° Año/Sistemas Operativos/Unidad 3/3. Material de Práctica.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/3. Material de Práctica.md
@@ -22,9 +22,9 @@ Para cargar una página en memoria, el sistema operativo debe encontrar un marco
 - La cantidad marcos que puede representar es $2^M$ marcos.
 - El tamaño de la página es de $2^D$ bytes.
 - La cantidad de bits necesaria para representar $N$ páginas está dada por:
-	- $$\frac{log_{10} N}{log_{10} 2}= P$$
+$$\frac{log_{10} N}{log_{10} 2}= P$$
 - La cantidad de bits necesaria para representar $N$ marcos está dada por:
-	- $$\frac{log_{10} N}{log_{10} 2}= M$$
+$$\frac{log_{10} N}{log_{10} 2}= M$$
 - La cantidad de bit necesarias para representar páginas de B bytes está dada por:
-	- $$\frac{log_{10} B}{log_{10} 2}= D$$
+$$\frac{log_{10} B}{log_{10} 2}= D$$
 
