Se puso lo de SO en el resumen

--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -107,6 +107,7 @@ A nivel de implementación, todos los sistemas operativos que utilizan segmentac
 - La segmentación es visible al usuario, ya que los programadores pueden optimizar el código de forma tal de que ocupen mucho menos espacio en memoria.
 - La localidad espacial hace referencia a que después de ejecutar una instrucción, lo más probable es que se ejecute al siguiente. Y la localidad temporal se refiere a que en una rutina puede que se repita la ejecución de determinadas instrucciones, un número determinado de veces.
 - En los sistemas por demanda el procesador va pidiendo las instrucciones a medida que el procesador las va solicitando, en el sistema de predicción se sube un grupo de instrucciones/datos al mismo tiempo, esto produce polución en los distintos niveles de cache.
+- La memoria caché tiene muchas más colisiones debido a que su tamaño es pequeño.
 - La fragmentación interna no puede ser solucionada, mientras que la fragmentación externa sí se puede solucionar mediante la compactación.
 - Con la segmentación paginada, el ciclo de vida del proceso es más corto y se mantiene la multiprogramación.
 
