--- a/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
+++ b/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
@@ -81,8 +81,17 @@ La velocidad y complejidad de los periféricos determinan como deben ser conecta
 - El sistema de E/S se puede dividir en dos componentes o partes, el software, que son los programas que interpretan lo que dicen los controladores de cada periférico específico, y, por otro lado, el hardware propiamente de cada dispositivo.
 - Los dispositivos de E/S avisan que la petición que fue solicitada está lista a través de interrupciones por hardware, además de esto puede ocurrir errores al momento de realizar estas peticiones, por lo que el sistema operativo debe saber resolverlo, esto lo hace gracias a la información que le brinda el driver.
 - Los dispositivos de E/S operan sobre la memoria principal a través de su correspondiente DMA, ya que de esa forma evita que el procesador malgaste su tiempo atendiendo las E/S, antiguamente el procesador gastaba parte de su tiempo para chequear si una E/S estaba lista.
-- A la hora de guardar un archivo recien creado se debe saber al dispositivo en el que se debe guardar y la ruta en la que va a estar almacenado este mismo archivo.
+- Cada dispositivo de E/S tiene su propio DMA, es imposible que dos dispositivos utilicen el mismo espacio de memoria, incluso si estos dispositivos están en un RAID.
+- A la hora de guardar un archivo recién creado se debe saber al dispositivo en el que se debe guardar y la ruta en la que va a estar almacenado este mismo archivo.
 - Existen dos tipos de buffers: de entrada y de salida.
 - La diferencia entre un buffer y la memoria caché, es que la memoria caché tiene almacenada información de los procesos que se encuentran en ejecución, mientras que los buffers almacenan información de entrada o de salida.
-- Los discos duros por lo general están compuestos por dos componentes, uno electrónico que es el controlador, y uno mecánico, que en este caso son los discos como tal.
+- Los discos duros por lo general están compuestos por dos componentes, uno electrónico, que es el controlador, y uno mecánico, que en este caso son los discos como tal.
 - Todos los discos rígidos modernos funcionan con un DMA.
+- Para que un proceso use un E/S este tiene que estar liberado, si no se produce un interbloqueo.
+- Si hay menos discos en el equipo, entonces va a existir una mayor competencia por estos dispositivos.
+- El sistema operativo solo reconoce y opera sobre bloques, lo cuales son creados cuando se formatea el disco con un sistema de archivos.
+
+>[!tldr] Los Buffers
+>- Buffer sencillo: entran y salen datos una a la vez
+>- Buffer doble: un buffer almacena todas entradas y otro todas las salidas, este tipo de buffers puede ser hasta cuatro.
+>- Buffer circular: entra y sale datos desde el mismo buffer, cuando es lento el productor pregunta ¿hay espacio? Y el consumidor si hay caracteres para consumir.
