--- a/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
+++ b/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
@@ -33,7 +33,7 @@ Esto conlleva a una serie de ventajas y desventajas, las cuales son las siguient
 
 ### Funciones del Sistema de Archivos
 
--  Identificar y ubicar un archivo específico.
+- Identificar y ubicar un archivo específico.
 - Mantener directorios o estructuras para agrupar archivos.
 - Cuando un archivo es compartido, el acceso debe ser controlado.
 - Por permisos bloquear, si es necesario, los accesos a archivos.
@@ -45,6 +45,15 @@ Las motivaciones detrás de la organización de los archivos es el menor tiempo 
 
 ### Cosas que fue Diciendo Berón
 
-- El nombre de los archivos no se almacena en los i-nodos, sino que en los directorios donde está dicho archivo. Cada directorio tienen una tabla, esta tabla cuenta con un registro por cada archivo que se encuentre dentro de ese directorio, ese registro va a estar conformado por dos campos, uno que contiene el nombre del archivo y el otro campo contendrá el número de i-nodo.
+- El nombre de los archivos no se almacena en los i-nodos o cabeceras, sino que en los directorios donde está dicho archivo. Cada directorio tienen una tabla, esta tabla cuenta con un registro por cada archivo que se encuentre dentro de ese directorio, ese registro va a estar conformado por dos campos, uno que contiene el nombre del archivo y el otro campo contendrá el número de i-nodo.
 - La extensión de los archivos sirven para indicar con qué aplicación se va a abrir dicho archivo.
 - Para poder acceder a un archivo se necesita conocer la ruta donde este mismo se encuentra.
+- Las cabeceras o i-nodos son lo mismo, guardan la información de los archivos.
+- El sistema operativo se abstrae de la estructura física de los dispositivos, a través de la utilización de archivos.
+- El almacenamiento en los discos duros es persistente y confiable, con confiable nos referimos a que los datos que se graban son los mismos que se leen, es decir, se evita la corrupción de datos.
+- Un vínculo es un acceso indirecto a un archivo que se encuentra en otra parte del sistema de archivos, los vínculos permiten tener dos nombres asociados a un mismo archivo.
+- El borrado de los archivos es lógico, la cabecera no se borra, sino que esta puede ser reasignado para otro archivo.
+- Al renombrar un archivo no se modifica la cabecera o i-nodo, sino que se modifica el directorio, ya que es este el que tiene almacenado el nombre del archivo.
+- Al abrir o cerrar los archivos, lo que se hace es actualizar la tabla general de archivos abiertos.
+- Cuando se desfragmenta un disco duro, existe información que no puede ser reubicada, el mejor ejemplo de eso es la partición o archivo ***swap***, además de la MBR del disco y la tabla de particiones.
+- Cuando se accede a un archivo y no se lo modifica, igualmente se actualiza la cabecera del archivo, ya que se tendrá que actualizar la fecha del último acceso.
