Agregamos primera cosa de SO

--- a/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
+++ b/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
@@ -1,4 +1,5 @@
-
+Los sistemas de E/S que están integrados en el sistema operativo tiene como objetivo el controlar y administrar los distintos dispositivos para optimizar su rendimiento, manejar las interrupciones y errores que estos dispositivos produzcan, es por eso mismo que estos deben ser independientes de los dispositivos.
+La administración y control de los dispositivos de E/S implica la ***supervisión del estado de estos dispositivos***, ***permitir el uso de estos dispositivos a todos los proceso***, esto implica asignar los recursos de forma justa para todos los procesos y poder ser liberados cada vez que este es ocupado, ***realizar la asignación de forma eficiente y justa*** para optimizar lo máximo posible las E/S, y ***liberar espacio***. 
 Los dispositivos se comunican mediante los llamados puertos. Un puerto de E/S consta de 4 registros:
 - Status.
 - Control.
@@ -8,6 +9,9 @@ Los dispositivos se comunican mediante los llamados puertos. Un puerto de E/S co
 Si uno o más dispositivos utilizan un conjunto común de cables, la conexión se denomina ***bus***. Los controladores son componentes electrónicos que manejan un puerto, un bus o un dispositivo.
 El sistema operativo administra y resuelve errores variados de E/S de tipo transitorio, como lo son los fallos de escritura, la temporización de red o una impresora fuera de línea. Los errores permanentes o desconocidos de E/S devuelven un código de error como resultado de la llamada de E/S al sistema.
 El núcleo del sistema operativo guarda el estado de los componentes de E/S, incluyendo a la tabla de archivos abiertos, la conexión de red y el estado de los dispositivos.
+
+>[!tldr] Manejo de Errores
+>Cuando uno de los dispositivos genera un error o se produce un error de E/S, el sistema operativo debe saber como tratarlo o como se debe proseguir, esto se logra gracias a los ***drivers*** de cada uno de los dispositivos, ya que estos reconocen que tipo de error es y poseen una rutina para su tratamiento.
 
 #### Flujo de las operaciones de E/S
 
@@ -30,6 +34,8 @@ La E/S es uno de los factores más importantes para el rendimiento del sistema, 
 - Los dispositivos de E/S salida son más lentos que el procesador.
 
 ![[SO-ESsoftware.png]]
+
+El software independiente del dispositivo es una capa que abstrae la complejidad de los drivers, es decir, de aquel software que depende directamente de la arquitectura de los dispositivos, cuya función es brindar una interfaz para interactuar con los distintos dispositivos de E/S. La capa independiente le permite a las aplicaciones del usuario realizar las peticiones a los dispositivos.
 
 >[!tldr] Los Relojes
 >En una computadora, el reloj es uno de los dispositivos más importantes y cumple las siguientes funciones:
@@ -90,6 +96,8 @@ La velocidad y complejidad de los periféricos determinan como deben ser conecta
 - Para que un proceso use un E/S este tiene que estar liberado, si no se produce un interbloqueo.
 - Si hay menos discos en el equipo, entonces va a existir una mayor competencia por estos dispositivos.
 - El sistema operativo solo reconoce y opera sobre bloques, lo cuales son creados cuando se formatea el disco con un sistema de archivos.
+- Los buffers se utilizan normalmente para disminuir el tiempo de uso del procesador y además para optimizar el uso del dispositivo.
+- La mínima unidad que puede leer el sistema operativo es un bloque.
 
 >[!tldr] Los Buffers
 >- Buffer sencillo: entran y salen datos una a la vez
