Se corrigio unas cosas de SO

--- a/3° Año/Sistemas Operativos/Unidad 3/3. Material de Práctica.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/3. Material de Práctica.md
@@ -12,6 +12,9 @@ Para cargar una página en memoria, el sistema operativo debe encontrar un marco
 
 ![[SO-pagLRU.png]]
 
+>[!caution] Anomalía de Bedaly
+>La anomalía de Belady se refiere a una situación en la que, al aumentar el tamaño de la memoria caché o la capacidad de la memoria virtual, el número de fallos de página aumenta en lugar de disminuir.
+
 ## Estructura de Direcciones
 
 ![[SO-estruc-dir.png]]
