--- a/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
+++ b/3° Año/Sistemas Operativos/Unidad 5/1. Sistema de Archivos.md
@@ -29,7 +29,17 @@ Esto conlleva a una serie de ventajas y desventajas, las cuales son las siguient
 - **Vínculos**: se crean rutas adicionales de acceso y permite más de un nombre para un mismo archivo.
 
 >[!tldr] Atributos de un Archivo
->Todo archivo tiene asignado un ***i-nodo***, que almacena toda la información sobre ese archivo, dentro de esa información se encuentra el nombre, tipo, locación, tamaño, propietario, protección y los tiempos.
+>Todo archivo tiene asignado un ***i-nodo***, que almacena toda la información sobre ese archivo. Dentro del i-nodo se guarda la siguiente información: número de i-nodo, tipo, tamaño, tiempos de modificación y acceso, propietario, grupo al que pertenece, permisos del archivo y la región de almacenamiento.
+
+### Atributos de un Archivo
+
+- Nombre
+- Tipo
+- Locación
+- Tamaño
+- Propietario
+- Protección
+- Tiempos
 
 ### Funciones del Sistema de Archivos
 
