indices de LP y SO

--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -1,4 +1,6 @@
- ![[LP-composicion-programa.png]]
+## Entidades, Ligaduras y sus Atributos
+
+![[LP-composicion-programa.png]]
 
 Podemos decir que un programa está compuesto por entidades, dichas entidades pueden ser variables, subprogramas o sentencias; a su vez estas entidades constan de atributos, tales como nombre, valor, tipo, locación de memoria, parámetros formales y reales, acción que se le asigna.
 Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en caso de una sentencia, uno de sus atributos pueden ser variables que se están sumando o incluso subprogramas al que se le asignara su retorno a una variable.
@@ -44,6 +46,7 @@ Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***
 >4. **Verificación de tipo**: El propósito más importante de las declaraciones, desde el punto de vista del programador (usuario), es permitir la verificación estática de tipos antes que la verificación dinámica, en otras palabras, ayuda a la verificación de tipos antes de la ejecución del programa.
 
 ---
+### Alcance, Visibilidad y Ambiente de Referenciamiento
 
 - **Alcance (Scope en JavaScript)**: Porción de código en la cual una variable puede ser referenciada. El alcance puede ser:
 	- **Estático**: En el caso de los programas anidados, si una variable es requerida para realizar una operación, se va a buscar en las estructuras que la envuelven hasta encontrarla, aclarar que se va a quedar siempre con la entidad más cercana.
