--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -1,11 +1,10 @@
 
->[!important] ¿Qué son las Reglas de Alcance?
->Determinan cómo una ocurrencia de un nombre es asociada con una variable. Es decir, cómo las referencias a variables no locales al subprograma que se está ejecutando, son asociadas con sus declaraciones y atributos.
->Estas reglas están más asociados con los lenguajes en los que se puede tener bloque de código anidándose unos a otros. Este tipo de estructuras se denominan bloques anidados, Existen dos formas en la que los lenguajes implementan estos bloques
->
->- Estática
->- Dinámica
+# ¿Qué son las Reglas de Alcance?
 
+Determinan cómo una ocurrencia de un nombre es asociada con una variable. Es decir, cómo las referencias a variables no locales al subprograma que se está ejecutando, son asociadas con sus declaraciones y atributos.
+Estas reglas están más asociados con los lenguajes en los que se puede tener bloque de código anidándose unos a otros. Este tipo de estructuras se denominan bloques anidados, Existen dos formas en la que los lenguajes implementan estos bloques
+- Estática
+- Dinámica
 
 # Reglas de Alcance Estático
 
