--- a/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
@@ -1,3 +1,4 @@
+## ¿Qué es el Sistema de Tipos?
 
 Así como la sintaxis define un conjunto de reglas que un programa tiene que seguir para ser considerado válido en un determinado lenguaje de programación. El sistema de tipos es un conjunto de reglas que estructuran y organizan el uso de los tipos de datos, definen como un lenguaje de programación clasifica valores, como se manipulan y como interactúan.
 
