--- a/3° Año/Lenguajes de Programación/Unidad 4/2. Abstracción de Datos y Tipos Primitivos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/2. Abstracción de Datos y Tipos Primitivos.md
@@ -1,11 +1,12 @@
->[!tldr] Concepto de abstracción
->Es una vista o representación de una entidad en la que se incluye, solo los atributos y propiedades importantes en ese momento indicado. Esto nos provee una serie de ventajas tales como:
->- Legibilidad
->- Oscurecimiento / Encapsulamiento
->- Reusabilidad
->- Verificación
->- Confiabilidad
->- Extensibilidad
+## Concepto de Abstracción
+
+Es una vista o representación de una entidad en la que se incluye, solo los atributos y propiedades importantes en ese momento indicado. Esto nos provee una serie de ventajas tales como:
+- Legibilidad
+- Oscurecimiento / Encapsulamiento
+- Reusabilidad
+- Verificación
+- Confiabilidad
+- Extensibilidad
 
 Es un mecanismo que nos permite dividir un problema en problemas más simples en base a la identificación de los datos. Permitiéndonos definir interfaces de acceso para cada una de las partes, oscureciendo o encapsulando la implementación de los tipos de datos, de modo tal que la interfaz actúe como especificación para el sistema.
 
