--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -1,4 +1,6 @@
-Las expresiones son construcciones sintácticas que permiten al programador cambiar valores de las variables y realizar operaciones para calcular nuevos valores. Generalmente las expresiones están compuestas por ***operadores***, ya sea símbolos mnemotécnicos o palabras reservadas, y de ***operandos***, que pueden ser variables o constantes e incluso literales.
+## Definición de Expresiones
+
+Las expresiones son construcciones sintácticas que permiten al programador cambiar valores de las variables y realizar operaciones para calcular nuevos valores. Generalmente, las expresiones están compuestas por ***operadores***, ya sea símbolos mnemotécnicos o palabras reservadas, y de ***operandos***, que pueden ser variables o constantes e incluso literales.
 Un aspecto muy importante a resaltar es la importancia de la sintaxis y la semántica de las expresiones, debido a que cada lenguaje de programación puede tratar a las expresiones de maneras distintas, como veremos más adelante.
 
 ## Clasificación de las Expresiones
