--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -1,7 +1,9 @@
+## ¿Qué son las Unidades?
+
 Las unidades son el mecanismo que proporcionan los lenguajes de programación mediante los cuales, los programadores pueden separar un programa en subprogramas más pequeños siguiendo cierta coherencia y lógica. Esto le otorga a los lenguajes mayor eficiencia, legibilidad y verificación.
 ## Abstracción de Procesos
 
-Retomando los conceptos de la [[1. Evolución de los Lenguajes de Programación#Lenguajes de Programción y Arquitectura de las Computadoras | Unidad 1]], a nivel estructural, las funciones y los procedimientos eran los mecanismos mediante el cual los lenguajes brindaban abstracción de proceso.
+Retomando los conceptos de la [[1. Evolución de los Lenguajes de Programación#Lenguajes de Programción y Arquitectura de las Computadoras|Unidad 1]], a nivel estructural, las funciones y los procedimientos eran los mecanismos mediante el cual los lenguajes brindaban abstracción de proceso.
 La principal diferencia entre las funciones y los procedimientos es que los ***procedimientos*** deben ser llamados mediante una palabra clave (o cualquiera sea que fuese el mecanismo que proporcione el lenguaje), estos van a recibir unos parámetros, los van a modificar internamente y pueden devolver $N$, 1 o 0 resultados.
 Mientras que las ***funciones*** siempre van a retornar un valor, con la particularidad de que las funciones siempre van a formar parte de una expresión y posteriormente va a ser asignada a una variable destino.
 Tanto las funciones como los procedimientos cuentan con una serie de características propias:
