--- a/3° Año/Sistemas Operativos/Unidad 2/3. Comunicación Interproceso.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/3. Comunicación Interproceso.md
@@ -1,3 +1,5 @@
+## La Comunicación Interproceso
+
 Los procesos que se ejecutan concurrentemente pueden ser procesos independientes o procesos cooperativos. Un proceso en ***independiente*** si no puede afectar o verse afectado por los demás procesos que se ejecutan en el sistema. Un proceso en ***cooperativo*** se puede afectar o verse afectado por los demás procesos que se ejecutan en el sistema. Evidentemente, cualquier proceso que comparta datos con otro es un proceso cooperativo.
 Existen varias razones por las cual se proporciona un entorno para la cooperación entre los procesos:
 
