--- a/3° Año/Sistemas Operativos/Unidad 2/5. Hilos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/5. Hilos.md
@@ -1,3 +1,5 @@
+## Introducción a los Hilos
+
 La principal razón de tener hilos es que en muchas aplicaciones se desarrollan varias actividades a la vez. Algunas de esas se pueden bloquear de vez en cuando. Al descomponer una aplicación en varios hilos secuenciales que se ejecutan en cuasi paralelo, el modelo de programación se simplifica.
 El Hilo no es más que un fragmento de un programa que puede ser ejecutado al mismo tiempo que otro. Tiene su propia cabecera que se compone de un Contador de Programa, una serie de registros y un área de pila. Al igual que los procesos, cada hilo puede compartir con los otros hilos, código, datos y recursos del sistema operativo.
 Cabe resaltar que el código, los datos y los recursos son poseídos por una entidad conocida como ***tarea***, estas tareas por sí solas no tienen capacidad para ejecutarse, solo poseen recursos. Estas tareas pueden ser asignadas a uno o varios hilos para que puedan ser ejecutadas, cada hilo solo puede ejecutar una tarea.
