--- a/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
+++ b/3° Año/Sistemas Operativos/Unidad 4/1. Sistema de Entrada-Salida.md
@@ -1,5 +1,7 @@
+## Introducción al Sistema de Entrada-Salida
+
 Los sistemas de E/S que están integrados en el sistema operativo tiene como objetivo el controlar y administrar los distintos dispositivos para optimizar su rendimiento, manejar las interrupciones y errores que estos dispositivos produzcan, es por eso mismo que estos deben ser independientes de los dispositivos.
-La administración y control de los dispositivos de E/S implica la ***supervisión del estado de estos dispositivos***, ***permitir el uso de estos dispositivos a todos los proceso***, esto implica asignar los recursos de forma justa para todos los procesos y poder ser liberados cada vez que este es ocupado, ***realizar la asignación de forma eficiente y justa*** para optimizar lo máximo posible las E/S, y ***liberar espacio***. 
+La administración y control de los dispositivos de E/S implica la ***supervisión del estado de estos dispositivos***, ***permitir el uso de estos dispositivos a todos los proceso***, esto implica asignar los recursos de forma justa para todos los procesos y poder ser liberados cada vez que este es ocupado, ***realizar la asignación de forma eficiente y justa*** para optimizar lo máximo posible las E/S, y ***liberar el dispositivo***. 
 Los dispositivos se comunican mediante los llamados puertos. Un puerto de E/S consta de 4 registros:
 - Status.
 - Control.
